[FIX] fix spin align in button

--- a/src/styles/components/spin.less
+++ b/src/styles/components/spin.less
@@ -130,6 +130,12 @@
         }
     }
 
+    &-main {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
     &-fix &-main {
         position: absolute;
         top: 50%;
